# AutoMem

./: .env.example  .gitignore  CITATION.cff  CONTRIBUTING.md  NOTICE  README.md  README_CN.md  SECURITY.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/workflows/: ci.yml
configs/: README.md  example.architecture.json
docs/: architecture.md  configuration.md  reproduction.md  reproduction_CN.md
examples/: smoke_tasks.jsonl
src/automem/: adaptive_sampler.py  architecture_space.py  base_memory.py  cli.py  config.py  contracts.py  data_split.py  endpoints.py  llm_utils.py  memory_schema.py  memory_types.py  model_io.py  resources.py  task_complexity.py  task_taxonomy.py
src/automem/architecture/: __init__.py  compiler.py  models.py
src/automem/benchmarks/gaia/: __init__.py  runner.py
src/automem/benchmarks/webwalkerqa/: runner.py
src/automem/benchmarks/xbench_deepsearch/: runner.py
src/automem/evaluation/: aggregation.py  io.py  judging.py  utils.py
src/automem/management/: __init__.py  base_op.py  pipeline.py  preset_registry.py  presets.py
src/automem/management/ops/: __init__.py  access_stats_update.py  boost_on_success.py  cluster_merge.py  conflict_detection.py  (+18 more)
src/automem/observation/: __init__.py  graph.py
src/automem/prompts/: entity_extraction_prompt.txt  extraction_planning_prompt.txt  insights_prompt.txt  query_classify.txt  relation_extraction_prompt.txt  shortcut_prompt.txt  tips_prompt.txt  trajectory_prompt.txt  workflow_prompt.txt
src/automem/providers/: modular_memory_provider.py  prompt_support.py
src/automem/retrieval/: __init__.py  base_retriever.py  cbr_rerank_retriever.py  cbr_retriever.py  contrastive_retriever.py  graph_retriever.py  hybrid_graph_retriever.py  hybrid_retriever.py  hyde_retriever.py  keyword_retriever.py  mmr_retriever.py  multi_store_retriever.py  query_classifier.py  semantic_retriever.py  tag_retriever.py  tag_vocabulary.py
src/automem/runtime/: __init__.py  context_composer.py  policy.py  query_planner.py  session.py
src/automem/search/: __init__.py  acquisition.py  attribution.py  diagnosis_synthesizer.py  engine.py  experience_ledger.py  exploration_tracker.py  incumbent_gate.py  memory_compliance.py  pareto_front.py  protocol.py  quarantine.py  scheduler.py  validator.py
src/automem/storage/: __init__.py  base_storage.py  graph_storage.py  hybrid_storage.py  json_storage.py  llm_graph_storage.py  vector_storage.py
src/flashoagents/: __init__.py  agents.py  base_agent.py  memory.py  mm_tools.py  mm_tools_utils.py  models.py  search_tools.py
src/flashoagents/cache/: __init__.py  config.py  page_cache.py  search_cache.py
tests/integration/: test_provider_lifecycle.py
tests/smoke/: test_cli_smoke.py
tests/unit/: test_agent_refresh.py  test_architecture_spec.py  test_cache_config.py  test_cost_aggregation.py  test_endpoint_security.py  test_evolution_integrity.py  test_final_test_contract.py  test_graph_consolidate.py  test_model_cost_contracts.py  test_portability.py  test_prompt_support.py  test_runtime_policy.py  test_search_engine_contracts.py  test_search_release_guards.py  test_security_boundaries.py  test_visual_inspector.py
(+10 files in other folders)
